prevent late classes from overflowing

--- a/live/schedule.css
+++ b/live/schedule.css
@@ -52,6 +52,7 @@
 }
 #days{
   position:absolute;
+  overflow:hidden;
   margin:1px;
   margin-top:0px;
   height:100%;
